# bevy-alt-ui-navigation-lite

./: CHANGELOG.md  Cargo.toml  Makefile  Readme.md
.github/workflows/: ci.yml
examples/: infinite_upgrades.rs  locking.rs  marking.rs  menu_navigation.rs  simple.rs  too_many_focusables.rs
src/: commands.rs  events.rs  lib.rs  marker.rs  menu.rs  named.rs  resolve.rs  seeds.rs  systems.rs
