[package]
name = "bevy-alt-ui-navigation-lite"
authors = ["Nicola Papale"]
description = "A bevy plugin to make implementing ui navigation in your game a piece of cake"
license = "MIT OR Apache-2.0"
readme = "Readme.md"
keywords = ["bevy", "ui", "navigation", "keyboard", "gamepad"]
categories = ["game-development", "accessibility", "gui"]
repository = "https://github.com/rparrett/bevy-alt-ui-navigation-lite"
homepage = "https://github.com/rparrett/bevy-alt-ui-navigation-lite"
exclude = ["assets", ".github"]
version = "0.30.0"
edition = "2021"

[features]
default = ["bevy_reflect"]
bevy_reflect = []

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset",
    "bevy_ui",
    "bevy_render",
] }
non-empty-vec = { version = "0.2.2", default-features = false }

[dev-dependencies]
fastrand = "2.0.1"
bevy = { version = "0.13", default-features = true }
