[package]
name = "bevy-alt-ui-navigation-lite"
authors = ["Rob Parrett", "Nicola Papale"]
description = "A bevy plugin to make implementing ui navigation in your game a piece of cake"
license = "MIT OR Apache-2.0"
readme = "Readme.md"
keywords = ["bevy", "ui", "navigation", "keyboard", "gamepad"]
categories = ["game-development", "accessibility", "gui"]
repository = "https://github.com/rparrett/bevy-alt-ui-navigation-lite"
homepage = "https://github.com/rparrett/bevy-alt-ui-navigation-lite"
exclude = ["assets", ".github"]
version = "0.1.0"
edition = "2021"

[features]
default = ["bevy_reflect"]
bevy_reflect = []

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "bevy_asset",
    "bevy_ui",
    "bevy_render",
] }
non-empty-vec = { version = "0.2.2", default-features = false }

[dev-dependencies]
fastrand = "2.0.1"
bevy = { git = "https://github.com/bevyengine/bevy", default-features = true }
